--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,9 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 100vw;
     overflow-x: hidden;
-    margin:0;
+    margin: auto;
 }
+
 nav{
     position: fixed;
     background-color: aqua;
